伪造数据渲染首页

--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@
 	<base href="/">
 </head>
 <body ng-controller="indexCtrl">
-	<a href="#" ng-click = "changePages(1)";>点击</a>
+	<a href="#" ng-click = "renderList()";>点击</a>
 	<ng-include src="'/views/include/nav.html'"></ng-include>
 	<section class="myblog_container container">
 		<ng-include src="'/views/include/bg.html'"></ng-include>
