--- a/static/index.html
+++ b/static/index.html
@@ -20,6 +20,6 @@
 		<div ui-view></div>
 	</section>
 	<ng-include src="'/views/include/footer.html'"></ng-include>
-	<script type="text/javascript" src="/js/app/main.js"></script>
+	<script type="text/javascript" src="/js/app/index.js"></script>
 </body>
 </html>
